--- a/src/components/Autocomplete/components/MappedAction/MappedAction.scss
+++ b/src/components/Autocomplete/components/MappedAction/MappedAction.scss
@@ -20,17 +20,22 @@ $item-vertical-padding: ($item-min-height - line-height(body)) / 2;
 
 .Action {
   @include focus-ring;
-  border-radius: var(--p-border-radius-base);
-  border-top: 1px solid var(--p-surface);
-  cursor: pointer;
   display: block;
-  min-height: $item-min-height;
-  padding: $item-vertical-padding spacing(tight);
-  text-align: left;
   width: 100%;
+  min-height: $item-min-height;
+  text-align: left;
+  cursor: pointer;
+  padding: $item-vertical-padding spacing(tight);
+  border-radius: var(--p-border-radius-base);
+  border-top: 1px solid var(--p-surface); // 1px gap between elements
 
-  &:focus:not(:active) {
-    @include focus-ring($style: 'focused');
+  &:hover {
+    background-color: var(--p-surface-hovered);
+    text-decoration: none;
+
+    @media (-ms-high-contrast: active) {
+      outline: 1px solid ms-high-contrast-color('text');
+    }
   }
 
   &.selected {
@@ -43,43 +48,34 @@ $item-vertical-padding: ($item-min-height - line-height(body)) / 2;
     background-color: var(--p-surface-pressed);
   }
 
-  &:hover {
-    background-color: var(--p-surface-hovered);
-    color: inherit;
-    text-decoration: none;
-
-    @media (-ms-high-contrast: active) {
-      outline: 1px solid ms-high-contrast-color('text');
-    }
+  &:focus:not(:active) {
+    @include focus-ring($style: 'focused');
   }
 
   &.destructive {
     @include recolor-icon(var(--p-icon-critical));
     color: var(--p-interactive-critical);
 
-    // stylelint-disable-next-line selector-max-class
-    &.selected {
-      background-color: var(--p-surface-critical-subdued-pressed);
-    }
-
     &:hover {
       background-color: var(--p-surface-critical-subdued-hovered);
+    }
+
+    // stylelint-disable-next-line selector-max-class
+    &:active,
+    &.selected {
+      background-color: var(--p-surface-critical-subdued-pressed);
     }
   }
 
   &.disabled {
+    background-image: none;
     color: var(--p-text-disabled);
-    pointer-events: none;
 
     // stylelint-disable-next-line selector-max-class
     .Prefix,
     .Suffix {
       @include recolor-icon(var(--p-icon-disabled));
     }
-  }
-
-  &::-moz-focus-inner {
-    border: none;
   }
 }
 
